# Codexswi

./: .env.example  .gitignore  .replit  .vercelignore  CARA_APPLY_MIGRATIONS.md  COMBINED_MIGRATIONS.sql  CREATE_PR_INSTRUCTIONS.md  INTEGRATION_SUMMARY.md  NEXT_STEPS.md  PHASE1_COMPLETE.md  PRD_MVP.md  PR_BODY.md  README.md  README_SUPABASE_INTEGRATION.md  SERVERLESS_FUNCTION_FIX.md  SESSION_SUMMARY.md  STATUS_INTEGRASI_SUPABASE.md  SUPABASE_SETUP.md  VERCEL_DEPLOYMENT.md  logs_result.json  main.py  pyproject.toml  replit.md  requirements.txt  test_imports.py  test_supabase_integration.py  vercel.json
PRDshard/: 00-ikhtisar-proyek.md  01-ringkasan-eksekutif.md  02-tujuan-mvp.md  03-persona-dan-kebutuhan.md  04-ruang-lingkup-mvp.md  05-teknologi-dan-arsitektur.md  06-di-luar-ruang-lingkup.md  07-metrik-sukses.md  08-timeline-dan-milestone.md  README.md
api/: index.py
attached_assets/: content-1759813026102.md  content-1759813119951.md
docs/: IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE1_COMPLETE_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE1_QUICK_START.md  PHASE1_SECURITY_IMPROVEMENTS.md  PHASE1_VERIFICATION_CHECKLIST.md  PHASE2_CODE_REVIEW.md  PHASE2_CRITICAL_FIXES_APPLIED.md  PHASE2_DEPLOYMENT_CHECKLIST.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PHASE2_QUICK_START.md  PHASE2_REVIEW_SUMMARY.md  PHASE3_CODE_REVIEW.md  PHASE3_COMPLETION_CHECKLIST.md  PHASE3_CRITICAL_FIXES_APPLIED.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_QUICK_START.md  PHASE3_REVIEW_SUMMARY.md  SUPABASE_IMPLEMENTATION_GUIDE.md  architecture-action-plan.md  architecture-prd-gap-analysis.md  brand-owner-dashboard-plan.md  codebase-review.md  implementation-progress.md  implementation-tasks-breakdown.md  moderation-dashboard-plan.md  nusantarum-feature-overview.md  nusantarum-implementation-plan.md  testing-guide.md  ui-ux-foundation.md  ui-ux-implementation-todo.md  user-profile-feature-plan.md  vercel-supabase-deployment.md
scripts/: minify_assets.py
story/: mobile-responsive-review.md  report-export.md  user-onboarding.md
tests/: conftest.py  test_app.py  (+19 more)
(+136 files in other folders)
