[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensasiwangi"
version = "0.1.0"
description = "MVP web application for Sensasiwangi.id"
authors = [{ name = "Sensasiwangi Team" }]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.100.0",
    "pydantic==2.7.0",
    "typing-extensions==4.9.0",

    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "pydantic-settings>=2.2",
    "aiofiles>=23.2",
    "httpx>=0.27",
    "mangum>=0.17.0",
    "email-validator>=2.2",

    "supabase==2.21.1",
    "bcrypt>=4.1.0",
    "slowapi>=0.1.9",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "anyio>=4.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
select = ["E", "F", "I", "UP", "B", "A", "COM", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
